@@ -5,6 +5,7 @@ ADD Multilines for plxMsg() #542 (lolo3129)
 ADD Count of articles for the homepage #659 (bazooka07)
 ADD New plxShow::meta_all() function #657 (bazooka07)
 ADD plxShow::pageUrl() function for canonical url #654 (bazooka07)
+ADD sitemap loc attribute use the canonical url #665 (Haruka)
 ADD Check the result of plxMotor::parseArticle() in several places #650 (bazooka07)
 ADD Build /robots.txt #647 (bazooka07)
 ADD Choix profil à partir duquel les médias sont indépendants #643 (bazooka07)
@@ -80,7 +81,7 @@ FIX plxShow::staticInclude #575 (bazooka07)
 FIX regex for moderated comms in backoffice, misc. optimizations on comments #572 (bazooka07)
 FIX php 8.1 compatibility and improvements to plxUtils::makeThumb #661 (sudwebdesign)
 FIX php 8.2 compatibility in plxUtils _printSelectDir: Warning: Cannot modify header information #671 (FrancoisThareau)
-FIX php 8.2 compatibility in plxMotor: Creation of dynamic property plxMotor::$cibleName is deprecated #666 (haruka, Txori)
+FIX php 8.2 compatibility in plxMotor: Creation of dynamic property plxMotor::$cibleName is deprecated #666 (Haruka, Txori)
 REFACTO pagination in backoffice for index.php & comments.php #649 (bazooka07)
 REFACTO Replace $LANG array with constants #633 (bazooka07)
 REFACTO plxMotor::getConfiguration #624 (bazooka07)
